Heat upstream default policy.json works in devstack
It does not however work in TripleO, and the ping test is failing
with master Heat because of this. I tried submitting a revert[1] in
Heat, but they have functional tests, so it is not broken...

The only option left is using puppet-heat to override the broken
default.

[1] https://review.openstack.org/#/c/332206/

Change-Id: I2c674a2e01eeacd17d3158f378be2d6ceeedc309

--- a/puppet/services/heat-base.yaml
+++ b/puppet/services/heat-base.yaml
@@ -38,3 +38,9 @@ outputs:
         heat::rabbit_port: {get_param: RabbitClientPort}
         heat::debug: {get_param: Debug}
         heat::enable_proxy_headers_parsing: true
+        # We need this because the default heat policy.json no longer works on TripleO
+        # https://git.openstack.org/cgit/openstack/heat/commit/?id=ac86702172ddf01f5bdc3f3cd99d2e32ad9b7024
+        heat::policy::policies:
+          context_is_admin:
+            key: 'context_is_admin'
+            value: 'role:admin'
