Wire NTP and Timezone services into BlockStorage nodes
Change-Id: Ia70688cfc333dc6536b5372cdb2eedb987ab61f8

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -217,11 +217,6 @@ parameters:
     description: The password for the nova service account, used by nova-api.
     type: string
     hidden: true
-  #TODO(ccamacho): Remove after landing Ntp in all roles
-  NtpServer:
-    default: ''
-    description: Comma-separated list of ntp servers
-    type: comma_delimited_list
   PublicVirtualFixedIPs:
     default: []
     description: >
@@ -266,11 +261,6 @@ parameters:
         Control the IP allocation for the StorageMgmgVirtualInterface port. E.g.
         [{'ip_address':'1.2.3.4'}]
     type: json
-  #TODO(ccamacho):Remove after landing composable timezone for all nodes
-  TimeZone:
-    default: 'UTC'
-    description: The timezone to be set on nodes.
-    type: string
   CloudDomain:
     default: 'localdomain'
     type: string
@@ -611,6 +601,8 @@ parameters:
   BlockStorageServices:
     default:
       - OS::TripleO::Services::CinderVolume
+      - OS::TripleO::Services::Ntp
+      - OS::TripleO::Services::Timezone
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the BlockStorage nodes.
@@ -984,8 +976,6 @@ resources:
           Image: {get_param: BlockStorageImage}
           KeyName: {get_param: KeyName}
           Flavor: {get_param: OvercloudBlockStorageFlavor}
-          TimeZone: {get_param: TimeZone}
-          NtpServer: {get_param: NtpServer}
           UpdateIdentifier: {get_param: UpdateIdentifier}
           Hostname:
             str_replace:
