Output generic role_data in services.yaml
This patch updates puppet/services/services.yaml (currently the only
interface for 'services' in t-h-t) so that we return a more generic
'role_data' Heat output.

This is a move towards making the services themselves a bit more generic
so we can accommodate other deployment types (containers, etc.)

Change-Id: I8bc32c59a48e6d5f0caa2f26fab394d5d992a4a5

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -875,9 +875,10 @@ resources:
           NodeIndex: '%index%'
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: ControllerSchedulerHints}
-          ServiceConfigSettings: {get_attr: [ControllerServiceChain, config_settings]}
+          ServiceConfigSettings: {get_attr: [ControllerServiceChain, role_data, config_settings]}
 
   ComputeServiceChain:
+
     type: OS::TripleO::Services
     properties:
       Services: {get_param: ComputeServices}
@@ -956,7 +957,7 @@ resources:
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: NovaComputeSchedulerHints}
           NodeIndex: '%index%'
-          ServiceConfigSettings: {get_attr: [ComputeServiceChain, config_settings]}
+          ServiceConfigSettings: {get_attr: [ComputeServiceChain, role_data, config_settings]}
 
   BlockStorageServiceChain:
     type: OS::TripleO::Services
@@ -989,7 +990,7 @@ resources:
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: BlockStorageSchedulerHints}
           NodeIndex: '%index%'
-          ServiceConfigSettings: {get_attr: [BlockStorageServiceChain, config_settings]}
+          ServiceConfigSettings: {get_attr: [BlockStorageServiceChain, role_data, config_settings]}
 
   ObjectStorageServiceChain:
     type: OS::TripleO::Services
@@ -1026,7 +1027,7 @@ resources:
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: ObjectStorageSchedulerHints}
           NodeIndex: '%index%'
-          ServiceConfigSettings: {get_attr: [ObjectStorageServiceChain, config_settings]}
+          ServiceConfigSettings: {get_attr: [ObjectStorageServiceChain, role_data, config_settings]}
 
   CephStorageServiceChain:
     type: OS::TripleO::Services
@@ -1059,7 +1060,7 @@ resources:
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: CephStorageSchedulerHints}
           NodeIndex: '%index%'
-          ServiceConfigSettings: {get_attr: [CephStorageServiceChain, config_settings]}
+          ServiceConfigSettings: {get_attr: [CephStorageServiceChain, role_data, config_settings]}
 
   ControllerIpListMap:
     type: OS::TripleO::Network::Ports::NetIpListMap
@@ -1425,7 +1426,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         controller_config: {get_attr: [Controller, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [ControllerServiceChain, step_config]}
+      StepConfig: {get_attr: [ControllerServiceChain, role_data, step_config]}
 
   ComputeNodesPostDeployment:
     type: OS::TripleO::ComputePostDeployment
@@ -1436,7 +1437,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         compute_config: {get_attr: [Compute, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [ComputeServiceChain, step_config]}
+      StepConfig: {get_attr: [ComputeServiceChain, role_data, step_config]}
 
   ObjectStorageNodesPostDeployment:
     type: OS::TripleO::ObjectStoragePostDeployment
@@ -1447,7 +1448,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         objectstorage_config: {get_attr: [ObjectStorage, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [ObjectStorageServiceChain, step_config]}
+      StepConfig: {get_attr: [ObjectStorageServiceChain, role_data, step_config]}
 
   BlockStorageNodesPostDeployment:
     type: OS::TripleO::BlockStoragePostDeployment
@@ -1458,7 +1459,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         blockstorage_config: {get_attr: [BlockStorage, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [BlockStorageServiceChain, step_config]}
+      StepConfig: {get_attr: [BlockStorageServiceChain, role_data, step_config]}
 
 
   CephStorageNodesPostDeployment:
@@ -1470,7 +1471,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         cephstorage_config: {get_attr: [CephStorage, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [CephStorageServiceChain, step_config]}
+      StepConfig: {get_attr: [CephStorageServiceChain, role_data, step_config]}
 
 outputs:
   KeystoneURL:
