--- a/puppet/services/services.yaml
+++ b/puppet/services/services.yaml
@@ -27,9 +27,8 @@ resources:
         EndpointMap: {get_param: EndpointMap}
 
 outputs:
-  config_settings:
-    description: Configuration settings.
-    value: {map_merge: {get_attr: [ServiceChain, role_data, config_settings]}}
-  step_config:
-    description: Step configuration.
-    value: {list_join: ["\n", {get_attr: [ServiceChain, role_data, step_config]}]}
+  role_data:
+    description: Combined Role data for this set of services.
+    value:
+      config_settings: {map_merge: {get_attr: [ServiceChain, role_data, config_settings]}}
+      step_config: {list_join: ["\n", {get_attr: [ServiceChain, role_data, step_config]}]}
