Update neutron ml2 class
Class was moved in with other plugins, it's just an update.

Change-Id: I6436c5c36ac0081a720cb8a737a573b1246127a1
Depends-On: I35332df5800083f3373f5c37411534d11e9b4401

--- a/puppet/services/neutron-plugin-ml2.yaml
+++ b/puppet/services/neutron-plugin-ml2.yaml
@@ -106,4 +106,4 @@ outputs:
                   TYPES: {get_param: NeutronNetworkType}
 
       step_config: |
-        include ::tripleo::profile::base::neutron::ml2
+        include ::tripleo::profile::base::neutron::plugins::ml2
