--- a/puppet/services/pacemaker/neutron-plugin-ml2.yaml
+++ b/puppet/services/pacemaker/neutron-plugin-ml2.yaml
@@ -25,4 +25,4 @@ outputs:
           - neutron::agents::ml2::ovs::enabled: false
             neutron::agents::ml2::ovs::manage_service: false
       step_config: |
-        include ::tripleo::profile::pacemaker::neutron::ml2
+        include ::tripleo::profile::pacemaker::neutron::plugins::ml2
