Pass RoleData into -post.yaml stacks
This patch modifies the interface for the -post stacks so
that we pass RoleData instead of just the StepConfig
into each -post.yaml template.

This will facilitate creating other types of -post.yaml scripts
that require more data that just 'step_config'. Things like
containers, etc. will require this.

Change-Id: I2527fc0098192f092f5e9046033a04bc71be2cae

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -1426,7 +1426,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         controller_config: {get_attr: [Controller, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [ControllerServiceChain, role_data, step_config]}
+      RoleData: {get_attr: [ControllerServiceChain, role_data]}
 
   ComputeNodesPostDeployment:
     type: OS::TripleO::ComputePostDeployment
@@ -1437,7 +1437,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         compute_config: {get_attr: [Compute, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [ComputeServiceChain, role_data, step_config]}
+      RoleData: {get_attr: [ComputeServiceChain, role_data]}
 
   ObjectStorageNodesPostDeployment:
     type: OS::TripleO::ObjectStoragePostDeployment
@@ -1448,7 +1448,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         objectstorage_config: {get_attr: [ObjectStorage, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [ObjectStorageServiceChain, role_data, step_config]}
+      RoleData: {get_attr: [ObjectStorageServiceChain, role_data]}
 
   BlockStorageNodesPostDeployment:
     type: OS::TripleO::BlockStoragePostDeployment
@@ -1459,8 +1459,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         blockstorage_config: {get_attr: [BlockStorage, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [BlockStorageServiceChain, role_data, step_config]}
-
+      RoleData: {get_attr: [BlockStorageServiceChain, role_data]}
 
   CephStorageNodesPostDeployment:
     type: OS::TripleO::CephStoragePostDeployment
@@ -1471,7 +1470,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         cephstorage_config: {get_attr: [CephStorage, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
-      StepConfig: {get_attr: [CephStorageServiceChain, role_data, step_config]}
+      RoleData: {get_attr: [CephStorageServiceChain, role_data]}
 
 outputs:
   KeystoneURL:
