--- a/puppet/cinder-storage-post.yaml
+++ b/puppet/cinder-storage-post.yaml
@@ -11,10 +11,9 @@ parameters:
   NodeConfigIdentifiers:
      type: json
      description: Value which changes if the node configuration may need to be re-applied
-  StepConfig:
-    type: string
-    description: Config manifests that will be used to step through the deployment.
-    default: ''
+  RoleData:
+    type: json
+    default: {}
 
 resources:
 
@@ -46,7 +45,7 @@ resources:
         list_join:
         - ''
         - - get_file: manifests/overcloud_volume.pp
-          - {get_param: StepConfig}
+          - {get_param: [RoleData, step_config]}
 
   VolumeDeployment_Step2:
     type: OS::Heat::StructuredDeployments
