--- a/puppet/controller-post.yaml
+++ b/puppet/controller-post.yaml
@@ -11,12 +11,11 @@ parameters:
   servers:
     type: json
   NodeConfigIdentifiers:
-     type: json
-     description: Value which changes if the node configuration may need to be re-applied
-  StepConfig:
-     type: string
-     description: Config manifests that will be used to step through the deployment.
-     default: ''
+    type: json
+    description: Value which changes if the node configuration may need to be re-applied
+  RoleData:
+    type: json
+    default: {}
 
 resources:
 
@@ -39,7 +38,7 @@ resources:
   ControllerPuppetConfig:
     type: OS::TripleO::ControllerConfig
     properties:
-      StepConfig: {get_param: StepConfig}
+      StepConfig: {get_param: [RoleData, step_config]}
 
   # Step through a series of Puppet runs using the same manifest.
   # NOTE: To enable stepping through the deployments via heat hooks,
