--- a/puppet/compute-post.yaml
+++ b/puppet/compute-post.yaml
@@ -11,12 +11,11 @@ parameters:
   servers:
     type: json
   NodeConfigIdentifiers:
-     type: json
-     description: Value which changes if the node configuration may need to be re-applied
-  StepConfig:
-     type: string
-     description: Config manifests that will be used to step through the deployment.
-     default: ''
+    type: json
+    description: Value which changes if the node configuration may need to be re-applied
+  RoleData:
+    type: json
+    default: {}
 
 resources:
 
@@ -47,7 +46,7 @@ resources:
         list_join:
         - ''
         - - get_file: manifests/overcloud_compute.pp
-          - {get_param: StepConfig}
+          - {get_param: [RoleData, step_config]}
 
   ComputeServicesBaseDeployment_Step2:
     type: OS::Heat::StructuredDeployments
