--- a/puppet/swift-storage-post.yaml
+++ b/puppet/swift-storage-post.yaml
@@ -9,12 +9,11 @@ parameters:
   servers:
     type: json
   NodeConfigIdentifiers:
-     type: json
-     description: Value which changes if the node configuration may need to be re-applied
-  StepConfig:
-     type: string
-     description: Config manifests that will be used to step through the deployment.
-     default: ''
+    type: json
+    description: Value which changes if the node configuration may need to be re-applied
+  RoleData:
+    type: json
+    default: {}
 
 resources:
 
@@ -46,7 +45,7 @@ resources:
         - ''
         - - get_file: manifests/overcloud_object.pp
           - get_file: manifests/ringbuilder.pp
-          - {get_param: StepConfig}
+          - {get_param: [RoleData, step_config]}
 
   StorageRingbuilderDeployment_Step2:
     type: OS::Heat::StructuredDeployments
