--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -189,13 +189,17 @@ parameters:
     type: string
     hidden: true
   NeutronTenantMtu:
+    default: ''
     description: >
-      The default MTU for tenant networks. For VXLAN/GRE tunneling, this should
-      be at least 50 bytes smaller than the MTU on the physical network. This
-      value will be used to set the MTU on the virtual Ethernet device.
-      This value will be used to construct the NeutronDnsmasqOptions, since that
-      will determine the MTU that is assigned to the VM host through DHCP.
-    default: "1400"
+      This value sets Neutron's path_mtu configuration option. For Mitaka and
+      later releases, if left empty or set to 0, Neutron will use the value
+      defined for global_physnet_mtu as the maximum MTU for tenant network
+      traffic (which currently defaults to 1500). Neutron also automatically
+      adjusts the MTU used for guests for tenant network types that add
+      overhead (e.g. GRE and VXLAN). The defaults are recommended unless the
+      impact of non-default values are well understood. Note also that this may
+      impact the behavior of NeutronDnsmasqOptions if it is set to a
+      non-default value.
     type: string
   NeutronTunnelTypes:
     default: 'vxlan'
@@ -566,11 +570,19 @@ parameters:
     type: number
     default: 4096
   NeutronDnsmasqOptions:
-    default: 'dhcp-option-force=26,%MTU%'
     description: >
-      Dnsmasq options for neutron-dhcp-agent. The default value here forces MTU
-      to be set to the value of NeutronTenantMtu, which should be set to account
-      for tunnel overhead.
+      Allows configuration options to be passed to the dnsmasq instances used
+      by the Neutron DHCP agent. For Mitaka and later releases, providing MTU
+      overrides through the NeutronDnsmasqOptions is not recommended as Neutron
+      will provide MTU values to guests based on the tenant network they are
+      connected to and automatically consider tenant network overhead in this
+      value (e.g. GRE and VXLAN overhead). However, if required the MTU can be
+      forced with values like the following,"dhcp-option-force=26,1360" and
+      "dhcp-option-force=26,%MTU%". The latter requires that NeutronTenantMtu
+      be configured and will replace the '%MTU%' substring with its value. This
+      NOT recommended if tenant networks with packet overhead are used as the
+      guest VM's MTU will be larger than usable MTU on it's tenant netowrk.
+    default: ''
     type: string
   NeutronPublicInterfaceDefaultRoute:
     default: ''
