--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -120,13 +120,17 @@ parameters:
     type: string
   NeutronTenantMtu:
     description: >
-      The default MTU for tenant networks. For VXLAN/GRE tunneling, this should
-      be at least 50 bytes smaller than the MTU on the physical network. This
-      value will be used to set the MTU on the virtual Ethernet device.
-      This number is related to the value of NeutronDnsmasqOptions, since that
-      will determine the MTU that is assigned to the VM host through DHCP.
-    default: 1400
-    type: number
+      This value sets Neutron's path_mtu configuration option. For Mitaka and
+      later releases, if left empty or set to 0, Neutron will use the value
+      defined for global_physnet_mtu as the maximum MTU for tenant network
+      traffic (which currently defaults to 1500). Neutron also automatically
+      adjusts the MTU used for guests for tenant network types that add
+      overhead (e.g. GRE and VXLAN). The defaults are recommended unless the
+      impact of non-default values are well understood. Note also that this may
+      impact the behavior of NeutronDnsmasqOptions if it is set to a
+      non-default value.
+    default: ''
+    type: string
   NeutronTunnelTypes:
     type: comma_delimited_list
     description: |
@@ -514,7 +518,6 @@ resources:
                 nova::compute::rbd::ephemeral_storage: {get_input: nova_enable_rbd_backend}
                 rbd_persistent_storage: {get_input: cinder_enable_rbd_backend}
                 nova_password: {get_input: nova_password}
-                nova::compute::network_device_mtu: {get_input: neutron_tenant_mtu}
                 nova::compute::vncserver_proxyclient_address: {get_input: nova_vnc_proxyclient_address}
                 nova::vncproxy::common::vncproxy_protocol: {get_input: nova_vncproxy_protocol}
                 nova::vncproxy::common::vncproxy_host: {get_input: nova_vncproxy_host}
@@ -542,7 +545,7 @@ resources:
                 neutron_host: {get_input: neutron_host}
                 neutron::agents::ml2::ovs::local_ip: {get_input: neutron_local_ip}
 
-                neutron::network_device_mtu: {get_input: neutron_tenant_mtu}
+                neutron::plugins::ml2::path_mtu: {get_input: neutron_tenant_mtu}
                 neutron::plugins::ml2::tenant_network_types: {get_input: neutron_tenant_network_types}
                 neutron::agents::ml2::ovs::tunnel_types: {get_input: neutron_tunnel_types}
                 neutron::agents::ml2::ovs::extensions: {get_input: neutron_agent_extensions}
