Add Aodh composable roles
Implements: blueprint composable-services-within-roles
Depends-On: Ie48a123cc5bc402aee635a5daf118b158c6f3b6a
Closes-Bug: #1601850

Change-Id: Ifcfe0e3937fa8577635d803d46c3dfc2e873e553

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -199,6 +199,10 @@ resource_registry:
   OS::Tripleo::Services::ManilaShare: OS::Heat::None
   OS::TripleO::Services::ComputeNeutronL3Agent: OS::Heat::None
   OS::TripleO::Services::ComputeNeutronMetadataAgent: OS::Heat::None
+  OS::TripleO::Services::AodhApi: puppet/services/aodh-api.yaml
+  OS::TripleO::Services::AodhEvaluator: puppet/services/aodh-evaluator.yaml
+  OS::TripleO::Services::AodhNotifier: puppet/services/aodh-notifier.yaml
+  OS::TripleO::Services::AodhListener: puppet/services/aodh-listener.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
