--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -284,6 +284,10 @@ parameters:
       - OS::Tripleo::Services::ManilaApi
       - OS::Tripleo::Services::ManilaScheduler
       - OS::Tripleo::Services::ManilaShare
+      - OS::TripleO::Services::AodhApi
+      - OS::TripleO::Services::AodhEvaluator
+      - OS::TripleO::Services::AodhNotifier
+      - OS::TripleO::Services::AodhListener
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
