--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -20,24 +20,6 @@ parameters:
     description: The password for the aodh services.
     type: string
     hidden: true
-  CeilometerBackend:
-    default: 'mongodb'
-    description: The ceilometer backend type.
-    type: string
-  CeilometerMeteringSecret:
-    description: Secret shared by the ceilometer services.
-    type: string
-    hidden: true
-  CeilometerPassword:
-    description: The password for the ceilometer service account.
-    type: string
-    hidden: true
-  CeilometerMeterDispatcher:
-    default: 'database'
-    description: Dispatcher to process meter data
-    type: string
-    constraints:
-    - allowed_values: ['gnocchi', 'database']
   CinderEnableNfsBackend:
     default: false
     description: Whether to enable or not the NFS backend for Cinder
@@ -534,6 +516,11 @@ parameters:
       - OS::TripleO::Services::SwiftStorage
       - OS::TripleO::Services::Snmp
       - OS::TripleO::Services::Timezone
+      - OS::TripleO::Services::CeilometerApi
+      - OS::TripleO::Services::CeilometerCollector
+      - OS::TripleO::Services::CeilometerExpirer
+      - OS::TripleO::Services::CeilometerAgentCentral
+      - OS::TripleO::Services::CeilometerAgentNotification
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
@@ -793,10 +780,6 @@ resources:
         properties:
           AdminPassword: {get_param: AdminPassword}
           AodhPassword: {get_param: AodhPassword}
-          CeilometerBackend: {get_param: CeilometerBackend}
-          CeilometerMeteringSecret: {get_param: CeilometerMeteringSecret}
-          CeilometerPassword: {get_param: CeilometerPassword}
-          CeilometerMeterDispatcher: {get_param: CeilometerMeterDispatcher}
           CloudDomain: {get_param: CloudDomain}
           ControlVirtualInterface: {get_param: ControlVirtualInterface}
           controllerExtraConfig: {get_param: controllerExtraConfig}
@@ -877,8 +860,6 @@ resources:
         properties:
           AdminPassword: {get_param: AdminPassword}
           CeilometerComputeAgent: {get_param: CeilometerComputeAgent}
-          CeilometerMeteringSecret: {get_param: CeilometerMeteringSecret}
-          CeilometerPassword: {get_param: CeilometerPassword}
           CinderEnableNfsBackend: {get_param: CinderEnableNfsBackend}
           CinderEnableRbdBackend: {get_param: CinderEnableRbdBackend}
           Debug: {get_param: Debug}
