--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -63,7 +63,7 @@ resource_registry:
   OS::TripleO::Network::Tenant: OS::Heat::None
   OS::TripleO::Network::Management: OS::Heat::None
 
-  OS::TripleO::Network::ExtraConfig: network/extraconfig.yaml
+  OS::TripleO::Network::ExtraConfig: OS::Heat::None
 
   OS::TripleO::Network::Ports::NetVipMap: network/ports/net_ip_map.yaml
   OS::TripleO::Network::Ports::NetIpMap: network/ports/net_ip_map.yaml
