--- a/puppet/services/keystone.yaml
+++ b/puppet/services/keystone.yaml
@@ -128,5 +128,12 @@ outputs:
         keystone::public_workers: {get_param: KeystoneWorkers}
         keystone_enable_db_purge: {get_param: KeystoneEnableDBPurge}
         keystone::public_endpoint: {get_param: [EndpointMap, KeystonePublic, uri_no_suffix]}
+        keystone::db::mysql::user: keystone
+        keystone::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        keystone::db::mysql::dbname: keystone
+        keystone::db::mysql::allowed_hosts:
+          - '%'
+          - "%{hiera('mysql_bind_host')}"
+
       step_config: |
         include ::tripleo::profile::base::keystone
