Move glance::db data within service template
Change-Id: I405bc9895160cc867f933e6b0d56546d460d2e3a

--- a/puppet/services/glance-registry.yaml
+++ b/puppet/services/glance-registry.yaml
@@ -41,5 +41,12 @@ outputs:
         glance::registry::identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
         glance::registry::debug: {get_param: Debug}
         glance::registry::workers: {get_param: GlanceWorkers}
+        glance::db::mysql::user: glance
+        glance::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host]}
+        glance::db::mysql::dbname: glance
+        glance::db::mysql::allowed_hosts:
+          - '%'
+          - "%{hiera('mysql_bind_host')}"
+
       step_config: |
         include ::tripleo::profile::base::glance::registry
