--- a/puppet/services/cinder-base.yaml
+++ b/puppet/services/cinder-base.yaml
@@ -56,3 +56,9 @@ outputs:
         cinder::rabbit_userid: {get_param: RabbitUserName}
         cinder::rabbit_password: {get_param: RabbitPassword}
         cinder::rabbit_port: {get_param: RabbitClientPort}
+        cinder::db::mysql::user: cinder
+        cinder::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host]}
+        cinder::db::mysql::dbname: cinder
+        cinder::db::mysql::allowed_hosts:
+          - '%'
+          - "%{hiera('mysql_bind_host')}"
