--- a/puppet/services/heat-engine.yaml
+++ b/puppet/services/heat-engine.yaml
@@ -54,5 +54,11 @@ outputs:
             heat::keystone_password: {get_param: HeatPassword}
             heat::db::mysql::password: {get_param: HeatPassword}
             heat::keystone::domain::domain_password: {get_param: HeatStackDomainAdminPassword}
+            heat::db::mysql::user: heat
+            heat::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host]}
+            heat::db::mysql::dbname: heat
+            heat::db::mysql::allowed_hosts:
+              - '%'
+              - "%{hiera('mysql_bind_host')}"
       step_config: |
         include ::tripleo::profile::base::heat::engine
