Move sahara::db data within service template
Change-Id: Ifb87f79e8cd692e6553d03df8394c74f51821e11

--- a/puppet/services/sahara-engine.yaml
+++ b/puppet/services/sahara-engine.yaml
@@ -37,5 +37,11 @@ outputs:
                   - '/sahara'
             sahara::database_connection: *sahara_dsn
             sahara::db::mysql::password: {get_param: SaharaPassword}
+            sahara::db::mysql::user: sahara
+            sahara::db::mysql::host: {get_param: [EndpointMap, MysqlVirtual, host]}
+            sahara::db::mysql::dbname: sahara
+            sahara::db::mysql::allowed_hosts:
+              - '%'
+              - "%{hiera('mysql_bind_host')}"
       step_config: |
         include ::tripleo::profile::base::sahara::engine
