Move neutron::db data within service template
Change-Id: I07a81a2e1cc29df007bba11da82cf6661a55aadf

--- a/puppet/services/neutron-server.yaml
+++ b/puppet/services/neutron-server.yaml
@@ -42,7 +42,7 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
-            neutron_dsn: &neutron_dsn
+            neutron::server::database_connection:
               list_join:
                 - ''
                 - - {get_param: [EndpointMap, MysqlInternal, protocol]}
@@ -54,7 +54,6 @@ outputs:
             neutron::server::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
             neutron::server::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
             neutron::server::identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
-            neutron::server::database_connection: *neutron_dsn
             neutron::server::api_workers: {get_param: NeutronWorkers}
             neutron::server::allow_automatic_l3agent_failover: {get_param: NeutronAllowL3AgentFailover}
             neutron::server::l3_ha: {get_param: NeutronL3HA}
@@ -66,5 +65,11 @@ outputs:
             neutron::server::notifications::project_name: 'service'
             neutron::server::notifications::password: {get_param: NovaPassword}
             neutron::db::mysql::password: {get_param: NeutronPassword}
+            neutron::db::mysql::user: neutron
+            neutron::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host]}
+            neutron::db::mysql::dbname: ovs_neutron
+            neutron::db::mysql::allowed_hosts:
+              - '%'
+              - "%{hiera('mysql_bind_host')}"
       step_config: |
         include tripleo::profile::base::neutron::server
