Move nova::db data within service template
Change-Id: I86752248e59a2e98f8ff9b2c5998839f9ade4779

--- a/puppet/services/nova-api.yaml
+++ b/puppet/services/nova-api.yaml
@@ -17,6 +17,8 @@ parameters:
 resources:
   NovaBase:
     type: ./nova-base.yaml
+    properties:
+      EndpointMap: {get_param: EndpointMap}
 
 outputs:
   role_data:
