--- a/puppet/services/nova-vncproxy.yaml
+++ b/puppet/services/nova-vncproxy.yaml
@@ -13,6 +13,8 @@ parameters:
 resources:
   NovaBase:
     type: ./nova-base.yaml
+    properties:
+      EndpointMap: {get_param: EndpointMap}
 
 outputs:
   role_data:
