--- a/puppet/services/pacemaker/sahara-api.yaml
+++ b/puppet/services/pacemaker/sahara-api.yaml
@@ -28,4 +28,4 @@ outputs:
           - sahara::service::api::manage_service: false
             sahara::service::api::enabled: false
       step_config: |
-        include ::tripleo::profile::pacemaker::sahara
+        include ::tripleo::profile::pacemaker::sahara::api
