--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -18,3 +18,5 @@ resource_registry:
   OS::TripleO::Services::MySQL: ../puppet/services/pacemaker/database/mysql.yaml
   # Services that are disabled by default (use relevant environment files):
   OS::Tripleo::Services::ManilaShare: OS::Heat::None
+  OS::TripleO::Services::SaharaApi: ../puppet/services/pacemaker/sahara-api.yaml
+  OS::TripleO::Services::SaharaEngine: ../puppet/services/pacemaker/sahara-engine.yaml
