--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -288,6 +288,8 @@ parameters:
       - OS::TripleO::Services::AodhEvaluator
       - OS::TripleO::Services::AodhNotifier
       - OS::TripleO::Services::AodhListener
+      - OS::TripleO::Services::SaharaApi
+      - OS::TripleO::Services::SaharaEngine
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
