--- a/puppet/services/pacemaker/sahara-engine.yaml
+++ b/puppet/services/pacemaker/sahara-engine.yaml
@@ -27,7 +27,5 @@ outputs:
           - get_attr: [SaharaEngineBase, role_data, config_settings]
           - sahara::service::engine::manage_service: false
             sahara::service::engine::enabled: false
-      # No puppet manifests since sahara-engine is included in
-      # ::tripleo::profile::pacemaker::sahara which is maintained alongside of
-      # pacemaker/sahara-api.yaml.
-      step_config:
+      step_config: |
+        include ::tripleo::profile::pacemaker::sahara::engine
