--- a/puppet/services/sahara-api.yaml
+++ b/puppet/services/sahara-api.yaml
@@ -10,7 +10,6 @@ parameters:
                  via parameter_defaults in the resource registry.
     type: json
   SaharaPassword:
-    default: unset
     description: The password for the sahara service account, used by sahara-api.
     type: string
     hidden: true
@@ -18,9 +17,6 @@ parameters:
     default: 0
     description: The number of workers for the sahara-api.
     type: number
-  SaharaApiVirtualIP:
-    type: string
-    default: ''
   KeystoneRegion:
     type: string
     default: 'regionOne'
@@ -29,6 +25,8 @@ parameters:
 resources:
   SaharaBase:
     type: ./sahara-base.yaml
+    properties:
+      EndpointMap: {get_param: EndpointMap}
 
 outputs:
   role_data:
@@ -38,12 +36,8 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [SaharaBase, role_data, config_settings]
-          - sahara::host: {get_param: SaharaApiVirtualIP}
-            sahara::port: {get_param: [EndpointMap, SaharaInternal, port]}
-            sahara::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
-            sahara::identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
-            sahara::admin_password: {get_param: SaharaPassword}
-            sahara::service::api::api_workers: {get_param: SaharaApiWorkers}
+          - sahara::port: {get_param: [EndpointMap, SaharaInternal, port]}
+            sahara::service::api::api_workers: {get_param: SaharaWorkers}
             sahara::keystone::auth::public_url: {get_param: [EndpointMap, SaharaPublic, uri]}
             sahara::keystone::auth::internal_url: {get_param: [EndpointMap, SaharaInternal, uri]}
             sahara::keystone::auth::admin_url: {get_param: [EndpointMap, SaharaAdmin, uri]}
