--- a/puppet/services/sahara-engine.yaml
+++ b/puppet/services/sahara-engine.yaml
@@ -9,15 +9,12 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
-  SaharaPassword:
-    default: unset
-    description: The password for the sahara service account, used by sahara-api.
-    type: string
-    hidden: true
 
 resources:
   SaharaBase:
     type: ./sahara-base.yaml
+    properties:
+      EndpointMap: {get_param: EndpointMap}
 
 outputs:
   role_data:
@@ -27,22 +24,5 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [SaharaBase, role_data, config_settings]
-          - sahara_dsn: &sahara_dsn
-              list_join:
-                - ''
-                - - {get_param: [EndpointMap, MysqlInternal, protocol]}
-                  - '://sahara:'
-                  - {get_param: SaharaPassword}
-                  - '@'
-                  - {get_param: [EndpointMap, MysqlInternal, host]}
-                  - '/sahara'
-            sahara::database_connection: *sahara_dsn
-            sahara::db::mysql::password: {get_param: SaharaPassword}
-            sahara::db::mysql::user: sahara
-            sahara::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
-            sahara::db::mysql::dbname: sahara
-            sahara::db::mysql::allowed_hosts:
-              - '%'
-              - "%{hiera('mysql_bind_host')}"
       step_config: |
         include ::tripleo::profile::base::sahara::engine
