--- a/puppet/services/ironic-base.yaml
+++ b/puppet/services/ironic-base.yaml
@@ -41,7 +41,7 @@ outputs:
     description: Role data for the Ironic role.
     value:
       config_settings:
-        ironic_dsn: &ironic_dsn
+        ironic::database_connection:
           list_join:
             - ''
             - - {get_param: [EndpointMap, MysqlInternal, protocol]}
@@ -51,14 +51,19 @@ outputs:
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/ironic'
         ironic::admin_tenant_name: 'service'
-        ironic::database_connection: *ironic_dsn
         ironic::debug: {get_param: Debug}
         ironic::rabbit_userid: {get_param: RabbitUserName}
         ironic::rabbit_password: {get_param: RabbitPassword}
         ironic::rabbit_port: {get_param: RabbitClientPort}
         ironic::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
         ironic::db::mysql::password: {get_param: IronicPassword}
-        ironic::keystone::auth::tenant: 'service'
+        ironic::db::mysql::user: ironic
+        ironic::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        ironic::db::mysql::dbname: ironic
+        ironic::db::mysql::allowed_hosts:
+          - '%'
+          - "%{hiera('mysql_bind_host')}"
 
+        ironic::keystone::auth::tenant: 'service'
       step_config: |
         include ::tripleo::profile::base::ironic
